backendlb.tf
resource "azurerm_lb_backend_address_pool" "backendlb" {
  loadbalancer_id = azurerm_lb.loadbalancer.id
  name            = "BackEndAddressPool"
}
