virtualnetwork.tf
resource "azurerm_network_security_group" "securegroup" {
  name                = "example-security-group"
  location            = azurerm_resource_group.batch06.location
  resource_group_name = azurerm_resource_group.batch06.name
}

resource "azurerm_virtual_network" "virtualnet" {
  for_each            = {for x in local.networks: x=>x}
  name                = each.key
  location            = azurerm_resource_group.batch06.location
  resource_group_name = azurerm_resource_group.batch06.name
  address_space       = ["10.0.0.0/16"]
  dns_servers         = ["10.0.0.4", "10.0.0.5"]

  subnet {
    name           = "subnet1"
    address_prefix = "10.0.1.0/24"
  }

  subnet {
    name           = "subnet2"
    address_prefix = "10.0.2.0/24"
    security_group = azurerm_network_security_group.securegroup.id
  }

  tags = {
    environment = "Production"
  }
}
